<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/constraintlayout"
    tools:context=".UI.ui_layer.AddProduct">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/addDisplayImg"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/shape"
                android:drawablePadding="10dp"
                android:fontFamily="@font/cantarell"
                android:gravity="center"
                android:padding="2dp"
                android:paddingStart="10dp"
                android:paddingEnd="5dp"
                android:text="@string/add_product_display_image"
                android:textColor="@color/appColor"
                android:textSize="18sp"
                android:textStyle="bold"
                app:drawableEndCompat="@drawable/add_pic_svgrepo_com" />

            <ImageView
                android:id="@+id/showDisplayImg"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:elevation="10dp"
                android:src="@drawable/picture"
                android:visibility="gone" />

            <TextView
                android:id="@+id/addSubImg"
                android:layout_width="wrap_content"
                android:layout_height="59dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/shape"
                android:drawablePadding="10dp"
                android:fontFamily="@font/cantarell"
                android:gravity="center"
                android:padding="2dp"
                android:paddingStart="10dp"
                android:paddingEnd="5dp"
                android:text="@string/add_product_multiple_sub_images"
                android:textColor="@color/appColor"
                android:textSize="18sp"
                android:textStyle="bold"
                app:drawableEndCompat="@drawable/add_pic_svgrepo_com" />

            <com.denzcoskun.imageslider.ImageSlider
                android:id="@+id/image_slider"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/shape"
                android:visibility="gone"
                app:iss_auto_cycle="true"
                app:iss_delay="1000"
                app:iss_period="1000"
                app:iss_text_align="CENTER" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape"
                android:fontFamily="@font/cantarell"
                android:hint="@string/enter_product_name"
                android:inputType="text"
                android:paddingStart="5dp"
                android:textColor="@color/appColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape"
                android:fontFamily="@font/cantarell"
                android:hint="Enter Product Price"
                android:inputType="text"
                android:paddingStart="5dp"
                android:textColor="@color/appColor"
                android:textSize="18sp"
                android:textStyle="bold" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:maxLines="10"
                android:maxHeight="300dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape"
                android:fontFamily="@font/cantarell"
                android:hint="@string/enter_product_description"
                android:paddingStart="5dp"
                android:textColor="@color/appColor"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape"
                android:fontFamily="@font/cantarell"
                android:hint="@string/enter_discount"
                android:inputType="text"
                android:paddingStart="5dp"
                android:textColor="@color/appColor"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="wrap_content"

                    android:layout_marginTop="10dp"
                    android:layout_height="50dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/addProductColors"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/shape"
                android:layout_marginTop="10dp"
                android:drawablePadding="10dp"
                android:fontFamily="@font/cantarell"
                android:gravity="center"
                android:padding="2dp"
                android:paddingStart="10dp"
                android:paddingEnd="5dp"
                android:text="@string/add_product_colors"
                android:textColor="@color/appColor"
                android:textSize="18sp"
                android:textStyle="bold"
                app:drawableEndCompat="@drawable/gui_palette_svgrepo_com" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:id="@+id/rvColor"
                tools:itemCount="1"
                tools:listitem="@layout/color_item"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/saveProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_back"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/cantarell"
                android:text="@string/save_product"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.github.guilhe.views.CircularProgressView
        android:id="@+id/circularProgressBar"

        android:layout_width="130dp"
        android:layout_height="130dp"
        app:progress="0"
        android:visibility="visible"
        app:progressBarThickness="14dp"
        app:progressBarColor="@color/appColor"
        app:layout_constraintEnd_toEndOf="@+id/constraintlayout"
        app:layout_constraintStart_toStartOf="@+id/constraintlayout"
        app:layout_constraintTop_toTopOf="@+id/constraintlayout" />

    <TextView
        android:id="@+id/percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0%"
        android:textColor="#0C0C0C"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="@+id/circularProgressBar"
        app:layout_constraintEnd_toEndOf="@+id/circularProgressBar"
        app:layout_constraintStart_toStartOf="@+id/circularProgressBar"
        app:layout_constraintTop_toTopOf="@+id/scrollView2" />
</androidx.constraintlayout.widget.ConstraintLayout>